kubernetes/apps/default/go2rtc/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go2rtc
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media Service
    gethomepage.dev/name: Go2RTC
    gethomepage.dev/icon: go2rtc.png
    gethomepage.dev/description: WebRTC streaming service
spec:
  ingressClassName: internal
  rules:
    - host: &host "go2rtc.cloudjur.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                annotations:
                  lbipam.cilium.io/ips: 10.10.30.36
                name: go2rtc
                port:
                  number: 80
  tls:
    - hosts:
        - *host
